--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a:focus {
 }
 
 .space {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .details p{
@@ -84,7 +84,7 @@ address span{
   top:1px;
 }
 .glyphicon-file:before, .glyphicon-print:before, .glyphicon-envelope:before, .glyphicon-picture:before{
-    margin-right: 10px;
+  margin-right: 10px;
   font-size: 18px;
   color: #6ecadc;
 }
@@ -117,7 +117,17 @@ address span{
 .company_details,.education_details {
 	padding:1.5em 0 0em 2em;
 }
+.company_details,.work_details {
+	padding:1.5em 0 0em 2em;
+}
 .company_details h4,.education_details h4{
+	color:#333;
+	font-weight:600;
+	font-size:1.5em;
+	margin-bottom:6px;
+	font-family: 'Varela Round', sans-serif;
+}
+.company_details h4,.work_details h4{
 	color:#333;
 	font-weight:600;
 	font-size:1.5em;
@@ -140,6 +150,22 @@ address span{
 	font-weight:300;
 	line-height:1.7em;
 }
+.company_details h4 span,.work_details h4 span{
+	font-size: 0.65em;
+  margin-left: 5px;
+  color: #000000;
+  font-weight:400;
+}
+.company_details h6,.work_details h6{
+	font-weight:400;
+	margin-bottom:1.3em;
+	font-size:0.9em;
+}
+.company_details p,.skill_info p,.work_details p{
+	color: #000000;
+	font-weight:300;
+	line-height:1.7em;
+}
 .cmpny1{
 	border-bottom:3px dashed #999;
 	padding-bottom:1em;
@@ -154,8 +180,8 @@ address span{
 	padding:1.5em 0 0 2em;
 }
 .skill1,.skill2{
-	 float:left;
-	 width:30%;
+	float:left;
+	width:30%;
 }
 .skill1 h4,.skill2 h4{
 	color:#333;
@@ -175,17 +201,26 @@ address span{
   padding: 5px 100px 5px 30px;
   display: inline-block;
 }
+.work  h3{
+  background: #999;
+  color: #FFF;
+  padding: 5px 100px 5px 30px;
+  display: inline-block;
+}
 h3.clr{
 	background: #926ab5;
 }
 h3.clr1{
-    background: #6680b5;
+  background: #6680b5;
 }
 h3.clr2{
 	background:#e9a820;
 }
 h3.clr3{
 	background:#3eb991;
+}
+h3.clr4{
+	background:#36BDFF;
 }
 .copywrite{
 	padding-left:2em;
@@ -194,6 +229,7 @@ h3.clr3{
 .copywrite p{
 	color:#999;
 	font-size:0.9em;
+	text-align: center;
 }
 .copywrite p a{
 	color:#999;
@@ -237,24 +273,40 @@ h3.clr3{
 }
 
 .menu_img{
-    width: 25px;
-    border-radius: 100px;
-    margin-right: 8px;
+  width: 25px;
+  border-radius: 100px;
+  margin-right: 8px;
 }
 
 .image {
-    width: 40px;
+  width: 40px;
 }
 .image_2 {
-    width: 120px;
+  width: 120px;
 }
 
 .image_3 {
-    width: 90px;
+  width: 90px;
 }
 
 .image_4 {
     width: 50px;
+}
+
+.image_5 {
+	width: 160px;
+	margin: 5px;
+}
+
+.smile_expo {
+	width: 100px;
+	margin: 5px;
+}
+
+.net_fix {
+	width: 120px;
+	margin: 5px;
+	margin-left: 0px;
 }
 
 .map iframe {
@@ -262,312 +314,347 @@ h3.clr3{
   height: 350px;
   border: none;
 }
+
+a:link {
+	text-decoration: none;
+}
 /*--responsive--*/
 @media (max-width: 1366px){
-.sidebar h1 {
-  font-size: 2em;
-}
+	.sidebar h1 {
+	  font-size: 2em;
+	}
 }
 @media (max-width: 1024px){
-.sidebar {
-  padding: 2em 17px;
-  width:20%;
-}
-.sidebar h1 {
-  font-size: 1.6em;
-}
-.main {
-  margin-left: 19.666667%;
-  width: 80%;
-}
+	.sidebar {
+	  padding: 2em 17px;
+	  width:20%;
+	}
+	.sidebar h1 {
+	  font-size: 1.6em;
+	}
+	.main {
+	  margin-left: 19.666667%;
+	  width: 80%;
+	}
 }
 @media (max-width: 768px){
-.sidebar {
-  width: 22%;
-}
-.main {
-  margin-left: 21.666667%;
-  width: 78%;
-}
-.sidebar h1 {
-  font-size: 1.4em;
-}
-.sidebar img {
-  padding: 0em;
-  width: 89%;
-}
-.details_header {
-  padding: 0em 1em 0 1em;
-}
-.details_header ul li a {
-  padding: 0 1em;
-  font-size: 0.9em;
-}
-.company h3,.skills h3,.education h3{
-  font-size: 1.2em;
-}
-.company_details h4, .education_details h4 {
-  font-size: 1.1em;
-}
-.company_details h6, .education_details h6 {
-  font-size: 0.8em;
-}
-.company_details p, .skill_info p, .education_details p {
-  font-size: 0.8em;
-}
-.cmpny1 {
-  padding-bottom: 1.5em;
-}
-.skill1, .skill2 {
-  float: left;
-  width: 50%;
-}
-.skill1 ul li,.skill2 ul li{
-	font-size:0.85em;
-}
-.skill1 h4, .skill2 h4 {
-  font-size: 1em;
-}
-.skill_list {
-  padding: 0.7em 0 0 2em;
-}
-.details p {
-  font-size: 0.75em;
-}
-address span {
-  font-size: 0.8em;
-}
-.contact-grid input[type="text"], .contact-grid textarea {
-  width: 100%;
-  font-size: 0.8em;
-}
-.send input[type="submit"] {
-  width: 20%;
-  font-size:0.85em;
-}
+	.sidebar {
+	  width: 22%;
+	}
+	.main {
+	  margin-left: 21.666667%;
+	  width: 78%;
+	}
+	.sidebar h1 {
+	  font-size: 1.4em;
+	}
+	.sidebar img {
+	  padding: 0em;
+	  width: 89%;
+	}
+	.details_header {
+	  padding: 0em 1em 0 1em;
+	}
+	.details_header ul li a {
+	  padding: 0 1em;
+	  font-size: 0.9em;
+	}
+	.company h3,.skills h3,.education h3{
+	  font-size: 1.2em;
+	}
+	.company h3,.skills h3,.work h3{
+	  font-size: 1.2em;
+	}
+	.company_details h4, .education_details h4 {
+	  font-size: 1.1em;
+	}
+	.company_details h6, .education_details h6 {
+	  font-size: 0.8em;
+	}
+	.company_details p, .skill_info p, .education_details p {
+	  font-size: 0.8em;
+	}
+	.company_details h4, .work_details h4 {
+	  font-size: 1.1em;
+	}
+	.company_details h6, .work_details h6 {
+	  font-size: 0.8em;
+	}
+	.company_details p, .skill_info p, .work_details p {
+	  font-size: 0.8em;
+	}
+	.cmpny1 {
+	  padding-bottom: 1.5em;
+	}
+	.skill1, .skill2 {
+	  float: left;
+	  width: 50%;
+	}
+	.skill1 ul li,.skill2 ul li{
+		font-size:0.85em;
+	}
+	.skill1 h4, .skill2 h4 {
+	  font-size: 1em;
+	}
+	.skill_list {
+	  padding: 0.7em 0 0 2em;
+	}
+	.details p {
+	  font-size: 0.75em;
+	}
+	address span {
+	  font-size: 0.8em;
+	}
+	.contact-grid input[type="text"], .contact-grid textarea {
+	  width: 100%;
+	  font-size: 0.8em;
+	}
+	.send input[type="submit"] {
+	  width: 20%;
+	  font-size:0.85em;
+	}
 }
 
 @media (max-width: 736px){
-.sidebar {
-  width: 100%;
-}
-.main {
-  margin-left: 0;
-  width: 100%;
-}
-.sidebar_top{
-	width:30%;
-	float:left;
-	margin-right:5%;
-}
-.details{
-	width:30%;
-	float:right;
-}
+	.sidebar {
+	  width: 100%;
+	}
+	.main {
+	  margin-left: 0;
+	  width: 100%;
+	}
+	.sidebar_top{
+		width:30%;
+		float:left;
+		margin-right:5%;
+	}
+	.details{
+		width:30%;
+		float:right;
+	}
 }
 @media (max-width: 640px){
-.sidebar {
-  width: 100%;
-}
-.main {
-  margin-left: 0;
-  width: 100%;
-}
-.sidebar_top{
-	width:30%;
-	float:left;
-	margin-right:5%;
-}
-.details{
-	width:30%;
-	float:right;
-}
-.sidebar img{
-	width:100%;
-}
-.details p {
-  font-size: 0.9em;
-  margin: 5px 0 1em 0;
-}
-.details h3 {
-  font-size: 0.9em;
-}
+	.sidebar {
+	  width: 100%;
+	}
+	.main {
+	  margin-left: 0;
+	  width: 100%;
+	}
+	.sidebar_top{
+		width:30%;
+		float:left;
+		margin-right:5%;
+	}
+	.details{
+		width:30%;
+		float:right;
+	}
+	.sidebar img{
+		width:100%;
+	}
+	.details p {
+	  font-size: 0.9em;
+	  margin: 5px 0 1em 0;
+	}
+	.details h3 {
+	  font-size: 0.9em;
+	}
 }
 @media (max-width: 600px){
-address {
-  margin-bottom:0px;
-}
-.sidebar_top {
-  width: 32%;
-}
-.sidebar img {
-  width: 85%;
-}
-}
-@media (max-width: 568px){
-.details_header ul li a {
-  padding: 0 0.5em;
-  font-size: 0.9em;
-}
-}
-@media (max-width: 480px){
-.content {
-  margin-right: 2em;
-}
-.glyphicon-file:before, .glyphicon-print:before, .glyphicon-envelope:before, .glyphicon-picture:before {
-  margin-right: 6px;
-  font-size: 16px;
-}
-.details_header ul li a {
-  padding: 0 0.5em;
-  font-size: 0.85em;
-}
-.details {
-  width: 36%;
-}
-.sidebar h1 {
-  font-size: 1.3em;
-}
-.sidebar_top {
-  width: 38%;
-}
-address {
-  margin-bottom: 0px;
-}
-.copywrite{
-	padding-left:1em;
-}
-.map iframe {
-  height: 246px;
-}
+	address {
+	  margin-bottom:0px;
+	}
+	.sidebar_top {
+	  width: 32%;
+	}
+	.sidebar img {
+	  width: 85%;
+	}
+	}
+	@media (max-width: 568px){
+	.details_header ul li a {
+	  padding: 0 0.5em;
+	  font-size: 0.9em;
+	}
+	}
+	@media (max-width: 480px){
+	.content {
+	  margin-right: 2em;
+	}
+	.glyphicon-file:before, .glyphicon-print:before, .glyphicon-envelope:before, .glyphicon-picture:before {
+	  margin-right: 6px;
+	  font-size: 16px;
+	}
+	.details_header ul li a {
+	  padding: 0 0.5em;
+	  font-size: 0.85em;
+	}
+	.details {
+	  width: 36%;
+	}
+	.sidebar h1 {
+	  font-size: 1.3em;
+	}
+	.sidebar_top {
+	  width: 38%;
+	}
+	address {
+	  margin-bottom: 0px;
+	}
+	.copywrite{
+		padding-left:1em;
+	}
+	.map iframe {
+	  height: 246px;
+	}
 }
 @media (max-width: 414px){
-.sidebar_top {
-  width: 45%;
-}
-.sidebar img {
-  width: 91%;
-}
-.details {
-  width: 42%;
-}
-.details_header {
-  padding: 0em 0em 0 1em;
-}
-.details_header ul li a {
-  padding: 0 0.3em;
-  font-size: 0.75em;
-}
-.skill1 ul, .skill2 ul {
-  padding-left: 3em;
-}
+	.sidebar_top {
+	  width: 45%;
+	}
+	.sidebar img {
+	  width: 91%;
+	}
+	.details {
+	  width: 42%;
+	}
+	.details_header {
+	  padding: 0em 0em 0 1em;
+	}
+	.details_header ul li a {
+	  padding: 0 0.3em;
+	  font-size: 0.75em;
+	}
+	.skill1 ul, .skill2 ul {
+	  padding-left: 3em;
+	}
 }
 @media (max-width: 384px){
-.sidebar h1 {
-  font-size: 1.2em;
-}
-.details {
-  width: 45%;
-}
-.details_header ul {
-  text-align: center;
-}
-.details_header ul li a {
-  padding: 0 1em;
-  font-size: 0.75em;
-}
-.main {
-  padding: 1em 0 2em 0;
-}
-.company_details, .education_details,.skill_info  {
-  padding: 1em 0 0em 1em;
-}
-.company h3 {
-  padding: 5px 41px 5px 16px;
-}
-.company_details h4, .education_details h4 {
-  font-size: 0.9em;
-}
-.company_details h6, .education_details h6 {
-  font-size: 0.6em;
-}
-.company {
-  margin: 1em 0;
-}
-.skills {
-  margin: 1em 0;
-}
-.company h3, .skills h3, .education h3 {
-  font-size: 1em;
-}
-.skills h3 {
-  padding: 5px 98px 5px 16px;
-}
-.skill1 ul, .skill2 ul {
-  padding-left: 2em;
-}
-.skill1 ul li, .skill2 ul li {
-  font-size: 0.75em;
-}
-.skill_list {
-  padding: 0.5em 0 0 1.5em;
-}
-.education h3 {
-  padding: 5px 190px 5px 16px;
-}
-.copywrite p{
-	font-size:0.7em;
-}
+	.sidebar h1 {
+	  font-size: 1.2em;
+	}
+	.details {
+	  width: 45%;
+	}
+	.details_header ul {
+	  text-align: center;
+	}
+	.details_header ul li a {
+	  padding: 0 1em;
+	  font-size: 0.75em;
+	}
+	.main {
+	  padding: 1em 0 2em 0;
+	}
+	.company_details, .education_details,.skill_info  {
+	  padding: 1em 0 0em 1em;
+	}
+	.company h3 {
+	  padding: 5px 41px 5px 16px;
+	}
+	.company_details h4, .education_details h4 {
+	  font-size: 0.9em;
+	}
+	.company_details h6, .education_details h6 {
+	  font-size: 0.6em;
+	}
+	.company_details, .work_details,.skill_info  {
+	  padding: 1em 0 0em 1em;
+	}
+	.company h3 {
+	  padding: 5px 41px 5px 16px;
+	}
+	.company_details h4, .work_details h4 {
+	  font-size: 0.9em;
+	}
+	.company_details h6, .work_details h6 {
+	  font-size: 0.6em;
+	}
+	.company {
+	  margin: 1em 0;
+	}
+	.skills {
+	  margin: 1em 0;
+	}
+	.company h3, .skills h3, .education h3 {
+	  font-size: 1em;
+	}
+	.company h3, .skills h3, .work h3 {
+	  font-size: 1em;
+	}
+	.skills h3 {
+	  padding: 5px 98px 5px 16px;
+	}
+	.skill1 ul, .skill2 ul {
+	  padding-left: 2em;
+	}
+	.skill1 ul li, .skill2 ul li {
+	  font-size: 0.75em;
+	}
+	.skill_list {
+	  padding: 0.5em 0 0 1.5em;
+	}
+	.education h3 {
+	  padding: 5px 190px 5px 16px;
+	}
+	.work h3 {
+	  padding: 5px 190px 5px 16px;
+	}
+	.copywrite p{
+		font-size:0.7em;
+		text-align: center;
+	}
 }
 @media (max-width: 375px){
-.sidebar h1 {
-  font-size: 1em;
-}
-.sidebar img {
-  width: 70%;
-}
-.details h3 {
-  font-size: 0.8em;
-}
-.details p {
-  font-size: 0.75em;
-  margin: 5px 0 0.5em 0;
-}
-address span {
-  font-size: 0.7em;
-}
-.sidebar {
-  padding: 1.5em 17px 1em 17px;
-}
-.details_header {
-  padding: 0em 0em 0 1em;
-  text-align: center;
-}
-.details_header ul li a {
-  line-height: 2em;
-}
+	.sidebar h1 {
+	  font-size: 1em;
+	}
+	.sidebar img {
+	  width: 70%;
+	}
+	.details h3 {
+	  font-size: 0.8em;
+	}
+	.details p {
+	  font-size: 0.75em;
+	  margin: 5px 0 0.5em 0;
+	}
+	address span {
+	  font-size: 0.7em;
+	}
+	.sidebar {
+	  padding: 1.5em 17px 1em 17px;
+	}
+	.details_header {
+	  padding: 0em 0em 0 1em;
+	  text-align: center;
+	}
+	.details_header ul li a {
+	  line-height: 2em;
+	}
 }
 @media (max-width: 320px){
-.sidebar_top {
-  width: 50%;
-}
-.sidebar img {
-  width: 80%;
-}
-.details h3 {
-  font-size: 0.7em;
-}
-.content {
-  margin-right: 1em;
-}
-.details_header ul li a {
-  padding: 0 0.5em;
-  font-size: 0.75em;
-}
-.skill1 h4, .skill2 h4 {
-  font-size: 0.85em;
-}
-.skill1 ul, .skill2 ul {
-  padding-left: 1.5em;
-}
+	.sidebar_top {
+	  width: 50%;
+	}
+	.sidebar img {
+	  width: 80%;
+	}
+	.details h3 {
+	  font-size: 0.7em;
+	}
+	.content {
+	  margin-right: 1em;
+	}
+	.details_header ul li a {
+	  padding: 0 0.5em;
+	  font-size: 0.75em;
+	}
+	.skill1 h4, .skill2 h4 {
+	  font-size: 0.85em;
+	}
+	.skill1 ul, .skill2 ul {
+	  padding-left: 1.5em;
+	}
 }
